<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/todayFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/today" />
    
    <item
        android:id="@+id/exploreFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/explore" />
    
    <item
        android:id="@+id/statsFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/stats" />
    
    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
    
</menu>

